--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: #042940;
 }
+
 
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
