--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,8 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
 
 // Define fonts for body and headers
-$body-font: "Work Sans", "Helvetica", "sans-serif";
-$headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font:  "Teko", "sans-serif";
+$headers-font: "Carter One", "cursive";
+$subtitles-font: "Anton", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
