--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <% @tickets.each do |ticket| %>
     <div class="ticket_card">
-      <p class="student-name"><%= ticket.student.username %></p>
-      <p class="student-name">Assigned to: <span><%= ticket.teacher.username %></span></p>
-      <p><%= ticket.challenge %></p>
-      <p><%= ticket.content %></p>
+      <p class="challenge"><%= ticket.challenge.upcase %></p>
+      <p>🧑‍💻 <%= ticket.student.first_name %> <%= ticket.student.last_name %></p>
+      <p>👨‍🏫 Assigned to: <span><%= ticket.teacher.first_name %> <%= ticket.teacher.last_name %></span></p>
+      <p class="content"><%= ticket.content %></p>
     </div>
   <% end %>
 </div>
